--- a/_config.yml
+++ b/_config.yml
@@ -120,6 +120,6 @@ nav:
   - title: "Home"
     url: /
   - title: "Projects"
-    url: /projects
+    url: /projects/
   - title: "Research"
-    url: /research
+    url: /research/
